--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<modules>
 		<module>basiccommon</module>
 		<module>basicbean</module>
+		<module>patternDesign</module>
+		<module>shiroWeb</module>
 	</modules>
 
 	<properties>
