DelayQueue队列问题  遗留

--- a/basicbean/pom.xml
+++ b/basicbean/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <artifactId>basicbean</artifactId>
   <name>basicbean</name>
+  
+  <dependencies>
+   	<dependency>
+		<groupId>com.thoughtworks.xstream</groupId>
+		<artifactId>xstream</artifactId>
+	</dependency>
+  </dependencies>
 </project>
