--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,19 @@
 		<jdk-version>1.8</jdk-version>
 		<project.sourceEncoding>UTF-8</project.sourceEncoding>
 		<compiler-version>3.1</compiler-version>
+		<xstream-versoin>1.3.1</xstream-versoin>
 	</properties>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>${xstream-versoin}</version>
+			</dependency>
+		</dependencies>
+
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
