--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<project.sourceEncoding>UTF-8</project.sourceEncoding>
 		<compiler-version>3.1</compiler-version>
 		<xstream-versoin>1.3.1</xstream-versoin>
+		<disruptor-versoin>3.3.6</disruptor-versoin>
 	</properties>
 
 	<dependencyManagement>
@@ -25,6 +26,12 @@
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
 				<version>${xstream-versoin}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.lmax</groupId>
+				<artifactId>disruptor</artifactId>
+				<version>${disruptor-versoin}</version>
 			</dependency>
 		</dependencies>
 
