--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<compiler-version>3.1</compiler-version>
 		<xstream-versoin>1.3.1</xstream-versoin>
 		<disruptor-versoin>3.3.6</disruptor-versoin>
+		<netty-versoin>5.0.0.Alpha2</netty-versoin>
 	</properties>
 
 	<dependencyManagement>
@@ -33,6 +34,13 @@
 				<artifactId>disruptor</artifactId>
 				<version>${disruptor-versoin}</version>
 			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-all</artifactId>
+				<version>${netty-versoin}</version>
+			</dependency>
+
+
 		</dependencies>
 
 	</dependencyManagement>
