thinking java 第15章 生成器

--- a/basiccommon/.gitignore
+++ b/basiccommon/.gitignore
@@ -1,3 +1,19 @@
 /target/
 /.classpath
 /.project
+/a.JPG
+/abcback.txt
+/b.JPG
+/data.txt
+/hello.txt
+/hello123.txt
+/hello2.txt
+/hello2dest.txt
+/hello3.txt
+/helloencode.txt
+/print.txt
+/property.txt123.txt
+/tempdata.ser
+/test.txt
+/test2.txt
+/test4.txt
