--- a/pom.xml
+++ b/pom.xml
@@ -1,61 +1,71 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.michjony</groupId>
-	<artifactId>javathinking</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>javabasic</name>
-	<modules>
-		<module>basiccommon</module>
-		<module>basicbean</module>
-		<module>patternDesign</module>
-	</modules>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.michjony</groupId>
+    <artifactId>javathinking</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>javabasic</name>
+    <modules>
+        <module>basiccommon</module>
+        <module>basicbean</module>
+        <module>patternDesign</module>
+    </modules>
 
-	<properties>
-		<jdk-version>1.8</jdk-version>
-		<project.sourceEncoding>UTF-8</project.sourceEncoding>
-		<compiler-version>3.1</compiler-version>
-		<xstream-versoin>1.3.1</xstream-versoin>
-		<disruptor-versoin>3.3.6</disruptor-versoin>
-		<netty-versoin>5.0.0.Alpha2</netty-versoin>
-	</properties>
+    <properties>
+        <jdk-version>1.8</jdk-version>
+        <project.sourceEncoding>UTF-8</project.sourceEncoding>
+        <compiler-version>3.1</compiler-version>
+        <xstream-versoin>1.3.1</xstream-versoin>
+        <disruptor-versoin>3.3.6</disruptor-versoin>
+        <netty-versoin>5.0.0.Alpha2</netty-versoin>
+    </properties>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.thoughtworks.xstream</groupId>
-				<artifactId>xstream</artifactId>
-				<version>${xstream-versoin}</version>
-			</dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>${xstream-versoin}</version>
+            </dependency>
 
-			<dependency>
-				<groupId>com.lmax</groupId>
-				<artifactId>disruptor</artifactId>
-				<version>${disruptor-versoin}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.netty</groupId>
-				<artifactId>netty-all</artifactId>
-				<version>${netty-versoin}</version>
-			</dependency>
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptor-versoin}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty-versoin}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.8</version>
+            </dependency>
 
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
 
-		</dependencies>
+        </dependencies>
 
-	</dependencyManagement>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${compiler-version}</version>
-				<configuration>
-					<source>${jdk-version}</source>
-					<target>${jdk-version}</target>
-					<encoding>${project.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler-version}</version>
+                <configuration>
+                    <source>${jdk-version}</source>
+                    <target>${jdk-version}</target>
+                    <encoding>${project.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
